Hot fixed for problem with API limitation

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,8 +2,7 @@
 
 body {
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-		sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
@@ -30,4 +29,9 @@ code {
 
 .border-dark-grey {
 	border-color: colors.$dark-grey !important;
+}
+
+.stats {
+	width: 155px;
+	border: 2px solid gray;
 }
